# WebSegment

./: '  .gitignore  Cargo.toml  flake.nix  index.html
files/: test-post-two.md  test-post.md
src/: card.rs  config.rs  footer.rs  hi.rs  indent.rs  main.rs  navigation_bar.rs  paragraph.rs  title.rs  utils.rs
src/background_animation/: mod.rs  snowfall.rs
src/pages/: home.rs  links.rs  markdown_file.rs  mod.rs  not_found.rs  post.rs  posts.rs  projects.rs  text.rs  txt.rs
stylesheets/: animations.scss  card-grid.scss  card.scss  colors.scss  effects.scss  footer.scss  hi.scss  index.scss  markdown.scss  navigation-bar.scss  navigation_bar.scss  not-found.scss  paragraph.scss  post.scss  status.scss  themed.scss
texts/: index
