[package]
name = "web-segment"
version = "0.10.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["SegmentationViolator <segmentationviolator@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
stylist = { version = "0.13", features = ["yew_integration"] }
wasm-bindgen = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-router = "0.18"
yew-markdown = { git = "https://github.com/rambip/rust-web-markdown.git" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Location",
    "Window",
]

[features]
pri-demon-th = []

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 'z'
