[package]
name = "web-segment"
version = "0.11.3"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["SegmentationViolator <segmentationviolator@proton.me>"]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
stylist = { version = "0.13", features = ["yew_integration"] }
wasm-bindgen = "0.2.114"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-router = "0.18"
yew-markdown = { git = "https://github.com/rambip/rust-web-markdown.git" }

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Location",
    "Window",
]

[features]
pri-demon-th = []

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true
